# chaos-engine

./: .dockerignore  .gitee-ci.yml  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.en.md  README.html  README.md  _build_lua.bat  build_and_test.bat  build_loop.bat  fix_bat.py  install_deps.bat  run.bat  run.sh  run_tmp.bat
.ci-reports/: TODO-fix.md  ci-failures-latest.md
bench_results/: posix_100.json  posix_1000.json  uring_100.json  uring_1000.json
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake
ci/: build.bat  build.sh
docs/: admin-dependencies.md  architecture.html  io_uring-ebpf-dev.md  io_uring-ebpf-usage.md  knowledge-tree.md
llm/: pull_llm.sh
loop-engine/: .gitignore  README.md  loop.yaml  pyproject.toml  report.json  report.md
loop-engine/config/: loop.yaml  models.yaml
loop-engine/loopengine/: __init__.py  cli.py
loop-engine/loopengine/adapter/: __init__.py  admin_query.py  capture.py  ci_trigger.py  log_collector.py  proc_manager.py  script_exec.py
loop-engine/loopengine/ai/: __init__.py  ark_client.py  model_router.py  task_splitter.py
loop-engine/loopengine/assertion/: __init__.py  structured.py  title_bar_parser.py  vision_review.py
loop-engine/loopengine/data/: db.py  models.py
loop-engine/loopengine/orchestrator/: __init__.py  client_ui_loop.py  dev_loop.py  loop_state.py  test_loop.py  verify_loop.py
loop-engine/loopengine/report/: __init__.py  json_report.py  markdown.py
openspec/: config.yaml
schemas/: CMakeLists.txt  chaos_common.fbs  chaos_replication.fbs  chaos_rpc.fbs
scripts/: bench_async_io.bat  bench_async_io.py  bench_async_io.sh  build_and_test.bat  build_and_test.sh  check_ci_failures.py  ci_monitor_pr10.py  ci_monitor_pr8.py  ci_monitor_pr9.py  ci_query.py  client_ctl.sh  conn_mgmt_smoke.py  create_pr.py  install-admin-deps.bat  install-admin-deps.sh  joint_client_test.sh  monitor_ci_email.py  run_loopengine.sh  setup_coredump.sh  start_client.bat  start_client.sh  start_cluster.bat  start_cluster.sh  start_dbproxy.bat  start_dbproxy.sh  start_gateway.bat  start_gateway.sh  start_with_admin.bat  start_with_admin.sh  status.sh  stop_cluster.bat  stop_cluster.sh  stop_cluster_server.sh  stress_client.py  stress_client_v2.py  tcp_fwd_smoke.py  test_client.bat  test_client.sh  test_dbproxy.bat  test_dbproxy.sh  (+15 more)
src_c/: CMakeLists.txt
src_c/admin_ipc/: CMakeLists.txt  ce_admin_ipc.c  ce_admin_ipc.h
src_c/codec/: CMakeLists.txt  ce_codec.c  ce_codec.h
src_c/compat_win/: fcntl.h  libgen.h  netdb.h  unistd.h
src_c/compat_win/arpa/: inet.h
src_c/compat_win/netinet/: in.h  tcp.h
src_c/compat_win/sys/: select.h  socket.h
src_c/core/: ce_math.c  ce_math.h  ce_memory.c  ce_memory.h  ce_platform.c  ce_platform.h  ce_platform_win.c  ce_time.c  ce_time.h  ce_time_win.c  ce_win_compat.h
src_c/dbproxy/: CMakeLists.txt  ce_dbproxy.c  ce_dbproxy.h  ce_dbproxy_native.c  ce_dbproxy_native.h
src_c/ebpf/: build_bpf.bat  build_bpf.sh  ce_lsm.c  ce_lsm.h  ce_lsm_kern.c  ce_stream_parser.c  ce_stream_parser.h  ce_stream_parser_kern.c  ce_uring_bpf.c  ce_uring_bpf_io.c  ce_uring_bpf_kern.c  ce_xdp.c  ce_xdp.h  ce_xdp_common.h  ce_xdp_dispatch.bpf.c  ce_xdp_filter.bpf.c  ce_xdp_kern.c
src_c/ecs/: ce_ecs.c  ce_ecs_internal.h
src_c/gateway/: CMakeLists.txt  ce_gateway.c  ce_gateway.h  ce_gateway_backend.c  ce_gateway_conn.c  ce_gateway_internal.h  ce_gateway_protocol.c  ce_gateway_router.c  ce_gateway_worker.c  ce_gateway_worker.h
src_c/log/: ce_log.c  ce_log_internal.h
src_c/network/: ce_async_io.h  ce_async_posix.c  ce_async_uring.c  ce_ebpf.c  ce_ebpf.h  ce_ebpf_kern.c  ce_kcp.c  ce_kcp.h  ce_kcp_lua.c  ce_kcp_lua.h  ce_net_base.c  ce_net_base.h  ce_net_base_lua.c  ce_net_base_lua.h  ce_network.c  ce_network.h  ce_rpc_call.c  ce_rpc_call.h  ce_rpc_call_lua.c  ce_rpc_call_lua.h
src_c/plugin/: ce_plugin.c  ce_plugin_internal.h
src_c/public_api/: ce_ecs.h  ce_log.h  ce_plugin.h  ce_types.h  chaos_engine.h
src_c/render/: ce_rhi.h  ce_rhi_vulkan.c  ce_rhi_vulkan.h
src_c/render/shaders/: sphere.vert  sphere_shaders.h  triangle.vert
src_c/replication/: ce_mailbox.c  ce_mailbox.h  ce_replication.c  ce_replication.h  ce_replication_internal.h  ce_rpc_channel.c  ce_rpc_channel.h
src_c/rpc/: CMakeLists.txt  ce_coroutine.c  ce_coroutine.h  ce_etcd_registry.c  ce_etcd_registry.h  ce_governance.c  ce_governance.h  ce_rpc.c  ce_rpc.h  ce_service_registry.c  ce_service_registry.h
src_c/rpc/example/: echo_service.c  rpc_client_test.c
src_c/runtime/: ce_async_bench_server.c  ce_async_echo_main.c  ce_client_main.c  ce_client_network.c  ce_client_network.h  ce_dbproxy_main.c  ce_ebpf_test_main.c  ce_engine.c  ce_gateway_c_main.c  ce_gateway_main.c  ce_headless_main.c  ce_net_client_main.c  ce_router_main.c  ce_server_main.c
src_c/save/: CMakeLists.txt  ce_save.c  ce_save.h
src_c/script/: ce_lua.c  ce_lua.h
src_c/server/: CMakeLists.txt  ce_aoi.c  ce_aoi.h  ce_aoi_grid.c  ce_cell.c  ce_cell.h  ce_cell_manager.c  ce_cell_manager.h  ce_game_protocol.h  ce_game_session.c  ce_game_session.h  ce_server_types.h
src_c/sync/: CMakeLists.txt  ce_sync.c  ce_sync.h
src_cpp/: CMakeLists.txt  editor_main.cpp
src_cpp/log_observer/: log_observer.cpp  log_observer.h
src_cpp/ui/: editor_ui.cpp  editor_ui.h
tests/: CMakeLists.txt  test_client_network.c
tests/bench/: CMakeLists.txt  bench_client.c  bench_runner.c  bench_xdp.c
tests/gateway/: __init__.py  gw_test_utils.py  test_10k.py  test_10k_qps.py  test_conn_mgmt.py  test_kcp.py  test_perf.py  test_router.py  test_tcp.py  test_websocket.py
tests/lua/: test_friend_integration.lua
tests/unit/: test_admin_e2e.c  test_admin_errors.c  test_admin_ipc.c  test_admin_perf.c  test_aoi.c  test_async_io.c  test_async_io_errors.c  test_async_io_posix.c  test_cell.c  test_codec.c  test_dbproxy_native.c  test_ebpf.c  test_ebpf_errors.c  test_ebpf_integration.c  test_ebpf_stress.c  test_ecs.c  test_etcd_registry.c  test_game_session.c  test_mailbox.c  test_math.c  test_memory.c  test_net_base.c  test_network.c  test_replication.c  test_rpc.c  test_rpc_channel.c
(+117 files in other folders)
